--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 .vs/ConsoleApp4/v17/.suo
 .vs/ConsoleApp4/v17/DocumentLayout.backup.json
 .vs/ConsoleApp4/v17/DocumentLayout.json
+.vs/ConsoleApp4/FileContentIndex/45909491-add7-4488-9fa1-7f8f20f1cd35.vsidx
+.vs/ConsoleApp4/FileContentIndex/7a1594af-7d57-440c-b8bd-391ca59afc5e.vsidx
